--- a/travel-client/src/app/contactus/contactus.component.html
+++ b/travel-client/src/app/contactus/contactus.component.html
@@ -31,7 +31,7 @@
             <form  class="row g-3"> 
               <div class="col-md-6">
                 <label for="FullName" class="form-label">Full Name</label>
-                <input type="text" class="form-control" name="fullName" [(ngModel)]="formData.fullName" placeholder="Name" required>
+                <input type="text" class="form-control" name="fullName" placeholder="Name" required>
               </div>
               <div class="col-md-6">
                 <label for="Email" class="form-label">Email</label>
