added payment page UI

--- a/travel-client/src/app/navigation/navigation.component.html
+++ b/travel-client/src/app/navigation/navigation.component.html
@@ -33,6 +33,9 @@
                   <li class="nav-item">
                     <a class="nav-link" routerLink="/contactus">Contactus</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" routerLink="/payment">Payment</a>
+                  </li>
                   <!-- <li class="nav-item">
                     <a class="nav-link" routerLink="/Login" (click)="auth.logout()">Logout</a>
                   </li> -->
