Added Payment page

--- a/travel-client/src/app/payment/payment.component.html
+++ b/travel-client/src/app/payment/payment.component.html
@@ -206,6 +206,10 @@
             Pay
           </button>
         </div>
+        <div *ngIf="isOpen" class="alert alert-success" role="alert">
+            {{successMessage}}
+            <button type="button" class="btn-close" (click)="closemessage()"></button>
+        </div>
       </div>
     </form>
   </div>
