--- a/travel-client/src/app/contactus/contactus.component.html
+++ b/travel-client/src/app/contactus/contactus.component.html
@@ -30,26 +30,28 @@
             <form  class="row g-3" (ngSubmit)="onSubmit(myform)" #myform="ngForm"> 
               <div class="col-md-6">
                 <label for="FullName" class="form-label">Full Name</label>
-                <input type="text" class="form-control" name="fullName" placeholder="Name" ngModel required #name="ngModel">
+                <input type="text" class="form-control" name="fullName" placeholder="Full Name" ngModel required #name="ngModel">
+                <div *ngIf="name.touched && name.invalid" style="color:red">Full Name is required</div>
               </div>
               <div class="col-md-6">
                 <label for="Email" class="form-label">Email</label>
-                <input type="email" class="form-control" name="email"  placeholder="Email" ngModel required #name="ngModel">
+                <input type="email" class="form-control" name="email" placeholder="Email" ngModel #email="ngModel">
               </div>
               <div class="col-12">
                 <label for="inputSubject" class="form-label">Subject</label>
-                <input type="text" class="form-control" name="subject"  placeholder="Subject" ngModel #name="ngModel">
+                <input type="text" class="form-control" name="subject"  placeholder="Subject" ngModel #subject="ngModel">
               </div>
               <div class="col-12">
                 <label for="inputMessage" class="form-label">Message</label>
-                <textarea class="form-control" rows="6" name="message"  placeholder="Message" ngModel required #name="ngModel"></textarea>
+                <textarea class="form-control" rows="6" name="message"  placeholder="Message" ngModel required #message="ngModel"></textarea>
+                <div *ngIf="message.touched && message.invalid" style="color:red">Message is required</div>
               </div>
               <div class="col-12">
                 <button class="button" type="submit">Send Message</button>
               </div>
               <div *ngIf="isOpen" class="alert alert-success" role="alert">
                 {{successMessage}}
-                <button type="button" class="btn-close" (click)="closemessage()"></button>
+                <button type="button" class="btn-close" (onClick)="closemessage()"></button>
               </div>
             </form>
           </div>
