--- a/travel-client/src/app/navigation/navigation.component.html
+++ b/travel-client/src/app/navigation/navigation.component.html
@@ -36,14 +36,14 @@
                   <li class="nav-item">
                     <a class="nav-link" routerLink="/payment">Payment</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" routerLink="/signup">Signup</a>
+                  </li>
                   <!-- <li class="nav-item">
                     <a class="nav-link" routerLink="/Login" (click)="auth.logout()">Logout</a>
                   </li> -->
                 <!-- </ng-container> -->
                 <ng-template #loggedOut>
-                  <li class="nav-item">
-                    <a class="nav-link" routerLink="/Signup">Signup</a>
-                  </li>
                   <li class="nav-item">
                     <a class="nav-link" routerLink="/Login">Login</a>
                   </li>
