--- a/travel-client/src/app/payment/payment.component.html
+++ b/travel-client/src/app/payment/payment.component.html
@@ -1,4 +1,5 @@
-<div class="container mt-3">
+<div class="payment-page">
+<div class="container mt-5">
   <!-- card for fetching the destination package name and price -->
   <div class="row">
     <div class="col-md-7">
@@ -51,7 +52,9 @@
                     class="form-control"
                     required
                   />
+                  <div *ngIf="firstname.touched && firstname.invalid" style="color:red">First Name is required</div>
                 </div>
+                
               </div>
               <div class="col-md-6">
                 <div class="form-group">
@@ -167,7 +170,9 @@
                     class="form-control"
                     required
                   />
+                  <div *ngIf="cardnumber.touched && cardnumber.invalid" style="color:red">Card Number is required</div>
                 </div>
+                
               </div>
               <div class="col-md-6">
                 <div class="form-group">
@@ -180,6 +185,7 @@
                     class="form-control"
                     required
                   />
+                  <div *ngIf="monthYear.touched && monthYear.invalid" style="color:red">Expiry is required</div>
                 </div>
               </div>
               <div class="col-md-6">
@@ -193,6 +199,7 @@
                     class="form-control"
                     required
                   />
+                  <div *ngIf="cvv.touched && cvv.invalid" style="color:red">cvv is required</div>
                 </div>
               </div>
             </div>
@@ -202,7 +209,7 @@
     </div>
       <div class="row">
         <div class="col-md-12 d-flex justify-content-center">
-          <button type="submit" class="btn btn-primary btn-lg px-5 my-4">
+          <button type="submit" class="btn btn-primary btn-lg px-5 my-4" [disabled]="paymentForm.invalid">
             Pay
           </button>
         </div>
@@ -213,4 +220,5 @@
       </div>
     </form>
   </div>
+</div>
 </div>
