--- a/travel-client/src/app/signup/signup.component.html
+++ b/travel-client/src/app/signup/signup.component.html
@@ -1,5 +1,5 @@
 <div class="col-md-8 form-right-side p-5">
-    <h1 class="mb-4">Sign UP</h1>
+    <h1 class="mb-4" style="margin-top:80px;">Sign UP</h1>
     <form *ngIf="signupForm" [formGroup]="signupForm" (ngSubmit)="onSubmit()" class="row g-4">
       <div class="col-md-6">
         <label for="user_name" class="form-label">User Name</label>
