--- a/travel-client/src/app/navigation/navigation.component.html
+++ b/travel-client/src/app/navigation/navigation.component.html
@@ -28,7 +28,7 @@
                     <a class="nav-link" routerLink="/BlogForm">BlogForm</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" routerLink="/History">History</a>
+                    <a class="nav-link" routerLink="/history">History</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" routerLink="/contactus">Contactus</a>
@@ -38,6 +38,9 @@
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" routerLink="/signup">Signup</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" routerLink="/login">Login</a>
                   </li>
                   <!-- <li class="nav-item">
                     <a class="nav-link" routerLink="/Login" (click)="auth.logout()">Logout</a>
